docs/tests/typing/bad/testfile-arith-3.cpp

int main() { int *p; p+p; }
